[package]
name = "swbus-core"
description = "SONiC Switch Bus Core"
categories = ["network-programming"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swbus-contracts = { workspace = true }

[lints]
workspace = true
